--- a/lesson 100/style.css
+++ b/lesson 100/style.css
@@ -1,10 +1,9 @@
 body{
-    text-align: center;
+    margin: auto 0;
+    font-family: Arial;
 }
 
 .zone {
-    /* padding:30px 50px;
-    margin:40px 60px; */
     cursor:pointer;
     color:#FFF;
     font-size:2em;
@@ -13,11 +12,85 @@ body{
     transition: all 0.3s linear;
 }
 
+/* Navigation */
+.sticky{
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.main-nav{
+    display: flex;
+    list-style: none;
+    font-size: 0.7em;
+    margin: 0;
+}
+
+@media only screen and (max-width: 600px) {
+    .main-nav{
+        font-size: 0.5em;
+        padding: 0;
+    }
+}
+
+.push{
+    margin-left: auto;
+}
+
+li{
+    padding: 20px;
+}
+
+a{
+    color: #f5f5f6;
+    text-decoration: none;
+}
+
+/* COVER */
+.container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30vh;
+}
+
+.cover{
+    width: 30rem;
+}
+
+/* GRID */
+.grid-wrapper{
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+}
+
+.box > img{
+    width: 100%;
+}
+
+.box{
+    background-color: rgb(55, 55, 55);
+    padding: 130px;
+    margin: 20px;
+}
+
+footer{
+    text-align: center;
+}
+
 .zone:hover {
     -webkit-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
     -moz-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
     -o-box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
     box-shadow:rgba(0,0,0,0.8) 0px 5px 15px, inset rgba(0,0,0,0.15) 0px -10px 20px;
+}
+
+.box:hover {
+    -webkit-transform: rotate(-7deg);
+    -moz-transform: rotate(-7deg);
+    -o-transform: rotate(-7deg);
+    transform: rotate(-7deg);
 }
 
 /*https://paulund.co.uk/how-to-create-shiny-css-buttons*/
@@ -38,7 +111,6 @@ body{
  *  Red Background
  **********************************************************************/
 .red{
-    height: 350px;
     background: #C655BE; /* Old browsers */
     background: -moz-linear-gradient(top, #C655BE 0%, #cf0404 100%); /* FF3.6+ */
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#C655BE), color-stop(100%,#cf0404)); /* Chrome,Safari4+ */
@@ -76,12 +148,4 @@ body{
     background: -o-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Opera 11.10+ */
     background: -ms-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* IE10+ */
     background: linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C */
-}
-
-.img{
-    height: 150px;
-    width: 150px;
-    padding: 100px;
-    margin: 3px;
-    background-color: rgb(52, 52, 52);
 }
