--- a/lesson 100/style.css
+++ b/lesson 100/style.css
@@ -46,6 +46,10 @@ a{
     text-decoration: none;
 }
 
+a:hover{
+    background-color: rebeccapurple;
+}
+
 /* COVER */
 .container{
     display: flex;
